--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "SlowMeDown",
+  "name": "Dial_Up",
   "version": "1.0",
   "description": "Slow down website loading with a toggle and domain exclusion menu.",
   "permissions": ["storage", "scripting", "activeTab"],
@@ -12,6 +12,7 @@
     "default_popup": "popup/popup.html",
     "default_icon": {
       "16": "icon16.png",
+      "32": "icon32.png",
       "48": "icon48.png",
       "128": "icon128.png"
     }
@@ -25,7 +26,7 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": ["wlan.gif"],
+      "resources": ["wlan.gif", "sounds/dial-up-internet-sound.mp3", "icon128.png", "globe.png"],
       "matches": ["<all_urls>"]
     }
   ]
